# jazz-practice

./: Cargo.toml  LICENSE  README.md  index.html  index.scss
.github/workflows/: pr_check.yml
src/: app.rs  main.rs  model.rs
src/model/: approach.rs  base.rs  enum_random.rs  mod.rs  two_handed_voicing.rs
src/ui/: app.rs  approach_randomizer.rs  mod.rs  two_handed_voicing_randomizer.rs
