[package]
name = "jazz-practice"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/peterstuart/jazz-practice"
license = "MIT"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
strum = { version = "0.23.0", features = ["derive"] }
yew = "0.19"
